--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'NotoSansKR';
+  font-weight: 400;
+  src: url('./resorces/fonts/NotoSansKR-Regular.woff2') format('woff2');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'NotoSansKR';
+  font-weight: 700;
+  src: url('./resorces/fonts/NotoSansKR-Bold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'NotoSansKR';
+  font-weight: 300;
+  src: url('./resorces/fonts/NotoSansKR-Light.woff2') format('woff2');
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  font-family: 'NotoSansKR', sans-serif;
+}
+
+.custom-placeholder::placeholder {
+  font-size: 14px;
+  color: #888;
+}
+
+.ul-li:hover {
+  text-decoration-thickness: 50px;
 }
