[design] 조회수 급상승 구현

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -164,3 +164,16 @@
   background-color: #2f3030;
   color: #fff;
 }
+
+.slide-item {
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.slide-item .active {
+  border: 1px solid #333;
+}
+
+.active-slide {
+  border: 2px solid red;
+}
